# PaddleNativeDemo

./: .gitignore  README.md
android/: .gitignore  README.md  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/image_classification/: CMakeLists.txt  build.gradle  get_model.sh
android/image_classification/src/androidTest/java/org/paddle/demo/: ExampleInstrumentedTest.java
android/image_classification/src/main/: AndroidManifest.xml
android/image_classification/src/main/assets/: imagenet_1000_labels.txt
android/image_classification/src/main/assets/resnet_50/: resnet_50.py
android/image_classification/src/main/cpp/: image_classifier_jni.cpp
android/image_classification/src/main/java/org/paddle/demo/: ImageClassifier.java  ImageClassifierActivity.java
android/image_classification/src/main/res/layout/: content_paddle_demo.xml  paddle_demo_activity.xml
android/image_classification/src/test/java/org/paddle/demo/: ExampleUnitTest.java
android/image_classifier/: CMakeLists.txt  build.gradle
android/image_classifier/src/main/: AndroidManifest.xml
android/image_classifier/src/main/cpp/: ImageClassifier_jni.cpp  native-lib.cpp
android/image_classifier/src/main/java/org/paddle/demo/: ImageClassifier.java  ImageClassifierActivity.java  PaddleDemoActivity.java
android/image_classifier/src/main/res/layout/: content_paddle_demo.xml  paddle_demo_activity.xml
android/image_classifier/src/main/res/menu/: menu_paddle_demo.xml
android/image_classifier/src/main/res/values/: strings.xml
android/optical_character_recognization/: CMakeLists.txt  FindPaddle.cmake  README.md  build.gradle
android/optical_character_recognization/src/androidTest/java/org/paddle/demo/: ExampleInstrumentedTest.java
android/optical_character_recognization/src/main/cpp/: optical_character_recognizer_jni.cpp  paddle_inference.cpp  paddle_inference.h
android/optical_character_recognization/src/main/java/org/paddle/demo/: OpticalCharacterRecognizer.java  OpticalCharacterRecognizerActivity.java  StaticTable.java
android/optical_character_recognization/src/main/res/layout/: activity_optical_character_recognizer.xml
android/optical_character_recognization/src/main/res/values/: styles.xml
android/optical_character_recognization/src/main/res/values-w820dp/: dimens.xml
android/optical_character_recognization/src/test/java/org/paddle/demo/: ExampleUnitTest.java
android/optical_character_recognizer/: CMakeLists.txt  build.gradle
android/optical_character_recognizer/src/main/: AndroidManifest.xml
android/optical_character_recognizer/src/main/java/org/paddle/demo/: OpticalCharacterRecognizer.java
android/optical_character_recognizer/src/main/res/layout/: content_optical_character_recognizer.xml
android/optical_character_recognizer/src/main/res/menu/: menu_optical_character_recognizer.xml
android/optical_character_recognizer/src/main/res/values/: colors.xml  dimens.xml  strings.xml
android/optical_character_recognizer/src/main/res/values-v21/: styles.xml
android/utils/cpp/: android_log_wrapper.cpp  android_log_wrapper.h  common.h
android/utils/java/org/paddle/utils/: TableReader.java
android/utils/org/paddle/utils/: FileUtils.java  ImageUtils.java
linux/image_classification/: CMakeLists.txt  image_utils.cpp  image_utils.h  main.cpp  paddle_inference.cpp  paddle_inference.h
linux/image_classification/models/resnet/v1/: merge_model.sh  merge_model_gpu.sh  resnet.py
linux/image_classifier/: CMakeLists.txt  convert_protobin.sh  get_model.sh  main.cpp  main_opencv.cpp
linux/image_classifier/resnet_50/: resnet_50.py
linux/optical_character_recognizer/: CMakeLists.txt  README.md  main.c  main.cpp  paddle_inference.cpp  paddle_inference.h
linux/optical_character_recognizer/models/: merge_model.sh
linux/utils/: binary_image_reader.h  common.h  image_reader.h  opencv_image_reader.h  timer.cc  timer.h
